Closed Bug 1637888 Opened 3 years ago Closed 3 years ago

Crash in [@ <name omitted> | mozilla::PreloaderBase::NotifyRestart]

Categories

(Core :: Networking, defect, P1)

78 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 --- fixed

People

(Reporter: calixte, Assigned: mayhemer)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-d422b068-beca-4102-bcaa-40fa40200514.

Top 10 frames of crashing thread:

0 libxul.so <name omitted> xpcom/ds/PLDHashTable.cpp:492
1 libxul.so mozilla::PreloaderBase::NotifyRestart uriloader/preload/PreloaderBase.cpp:149
2 libxul.so mozilla::dom::ScriptLoader::RestartLoad dom/script/ScriptLoader.cpp:1254
3 libxul.so mozilla::dom::ScriptLoadHandler::OnStreamComplete dom/script/ScriptLoadHandler.cpp
4 libxul.so nsIncrementalStreamLoader::OnStopRequest netwerk/base/nsIncrementalStreamLoader.cpp:86
5 libxul.so nsCORSListenerProxy::OnStopRequest netwerk/protocol/http/nsCORSListenerProxy.cpp:605
6 libxul.so mozilla::net::HttpChannelChild::DoOnStopRequest netwerk/protocol/http/HttpChannelChild.cpp:1261
7 libxul.so mozilla::net::HttpChannelChild::OnStopRequest netwerk/protocol/http/HttpChannelChild.cpp:1125
8 libxul.so mozilla::net::ChannelEventQueue::FlushQueue netwerk/ipc/ChannelEventQueue.cpp:90
9 libxul.so mozilla::net::ChannelEventQueue::ResumeInternal netwerk/ipc/ChannelEventQueue.cpp:148

There is 1 crash in nightly 78 with buildid 20200513094918. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1618287.

[1] https://hg.mozilla.org/mozilla-central/rev?node=86c478d114ec

Flags: needinfo?(honzab.moz)

Yep, just a missing non-null check. On it.

Assignee: nobody → honzab.moz
Severity: -- → S2
Status: NEW → ASSIGNED
Flags: needinfo?(honzab.moz)
Priority: -- → P1
Pushed by honzab.moz@firemni.cz:
https://hg.mozilla.org/integration/autoland/rev/ce86fc54910a
Add a null-check for Document passed to `PreloaderBase::NotifyRestart` as it is a valid case to happen, r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.