Bug 1637888 - Add a null-check for Document passed to `PreloaderBase::NotifyRestart` as it is a valid case to happen, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D75282